Add environment variables and configure database connections

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 # Question: Quelles sont les informations sensibles à ne jamais commiter ?
-# Réponse : 
+# Réponse : Les informations sensibles à ne jamais commiter incluent les clés API, les mots de passe, les secrets de connexion à la base de données, et toute autre information qui pourrait être utilisée pour accéder à des systèmes ou des données sensibles.
+
 # Question: Pourquoi utiliser des variables d'environnement ?
-# Réponse : 
+# Réponse : Utiliser des variables d'environnement permet de séparer la configuration de l'application du code source, ce qui facilite la gestion des différents environnements (développement, test, production) et améliore la sécurité en évitant de commiter des informations sensibles.
 
 MONGODB_URI=mongodb://localhost:27017
 MONGODB_DB_NAME=learning_platform
