--- a/.env
+++ b/.env
@@ -8,3 +8,11 @@ MONGODB_URI=mongodb://localhost:27017
 MONGODB_DB_NAME=learning_platform
 REDIS_URI=redis://localhost:6379
 PORT=3000
+
+REDIS_KEY_ALL_COURSES=course:all
+REDIS_KEY_COURSE_PREFIX=course:
+REDIS_KEY_COURSE_STATS=stats:course
+
+REDIS_KEY_ALL_STUDENTS=student:all
+REDIS_KEY_STUDENT_PREFIX=student:
+REDIS_KEY_STUDENT_STATS=stats:student
