--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "Redis",
     "GLSID, II-BDCC, II-CCN"
   ],
-  "author": "Abdelaziz DAAIF",
+  "author": "Oussama BOUHOUCH",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.7",
